# prototype

./: README.md
macros/MvtxPrototype2/: Draw.C  Draw_hitmap.C  Draw_hotmap.C  Fun4All_TestBeam.C  Style.h  mvtxBeamTestRunScan.C
macros/prototype2/: Fun4All_G4_Prototype2.C  Fun4All_TestBeam.C
macros/prototype3/: Fun4All_G4_Prototype3.C  Fun4All_TestBeam.C
macros/prototype4/: Fun4All_G4_Prototype4.C  Fun4All_TestBeam.C
macros/tpc2019/: ConstructGeometry.C  DrawTPCFEE.C  DrawTpcPrototypeGenFitTrkFitter.C  DrawTpcPrototypeGenFitTrkFitter_Summary.C  DrawTpcPrototypeUnpacker.C  Fun4All_G4_TPC.C  Fun4All_TestBeam_TPC.C  SaveCanvas.C  TpcPrototypeGeometry.gdml  vis.mac
online/mvtx2019_pmon/: Makefile  mvtxOM.cc  mvtxOM.h
online/mvtx2019_pmon/scripts/: get_hitrate.C  make_plot.C  open_file.C  run_om.C
online/pmonitor/mvtx2019/: Makefile  mvtx.cc  mvtx.h  mvtxLinkDef.h  mvtxOM.cc
online/pmonitor/mvtx2019/scripts/: run_om.C
online_pmonitor/mvtx2019/: mvtxOM.cc  mvtxOMLinkDef.h
online_pmonitor/mvtx2019/scripts/: open_file.C
simulation/g4simulation/g4caloprototype/: Makefile.am  PHG4HcalPrototypeDetector.cc  PHG4HcalPrototypeDetector.h  PHG4HcalPrototypeDetectorMessenger.cc  PHG4HcalPrototypeDetectorMessenger.h  PHG4HcalPrototypeSteppingAction.cc  PHG4HcalPrototypeSteppingAction.h  PHG4HcalPrototypeSubsystem.cc  PHG4HcalPrototypeSubsystem.h  PHG4Prototype2HcalCellReco.cc  PHG4Prototype2HcalCellReco.h  PHG4Prototype2InnerHcalDetector.cc  PHG4Prototype2InnerHcalDetector.h  PHG4Prototype2InnerHcalSteppingAction.h  PHG4Prototype2InnerHcalSubsystem.cc  PHG4Prototype2InnerHcalSubsystem.h  PHG4Prototype2OuterHcalDetector.cc  PHG4Prototype2OuterHcalDetector.h  PHG4Prototype2OuterHcalSteppingAction.h  PHG4Prototype2OuterHcalSubsystem.cc  PHG4Prototype2OuterHcalSubsystem.h  PHG4Prototype3InnerHcalDetector.cc  PHG4Prototype3InnerHcalDetector.h  PHG4Prototype3InnerHcalSteppingAction.h  PHG4Prototype3InnerHcalSubsystem.cc  PHG4Prototype3InnerHcalSubsystem.h  PHG4PrototypeHcalDefs.h  PHG4SpacalPrototype4Detector.cc  PHG4SpacalPrototype4Detector.h  PHG4SpacalPrototype4SteppingAction.cc  PHG4SpacalPrototype4SteppingAction.h  PHG4SpacalPrototype4Subsystem.cc  PHG4SpacalPrototype4Subsystem.h  PHG4SpacalPrototype4SubsystemLinkDef.h  PHG4SpacalPrototypeDetector.cc  PHG4SpacalPrototypeDetector.h  PHG4SpacalPrototypeSteppingAction.cc  PHG4SpacalPrototypeSteppingAction.h  PHG4SpacalPrototypeSubsystem.cc  PHG4SpacalPrototypeSubsystem.h  (+3 more)
